syntax = "proto3";

import "google/protobuf/empty.proto";

package gameplay_service;

message CureAnimalRequest {
    string userId = 1;
    string placedItemAnimalId = 2;
    string inventorySupplyId = 3;
}